import java.time.Clock
import java.time.LocalDateTime
import java.time.format.DateTimeFormatter

plugins {
    id("java-library")
}

group = "org.soak"
var dateTime = LocalDateTime.now(Clock.systemUTC())
version = project.property("BUKKIT_VERSION") + "." + dateTime.format(DateTimeFormatter.ofPattern("yyMMddHHmm"))

java {
    toolchain {
        targetCompatibility = JavaVersion.VERSION_21
        sourceCompatibility = JavaVersion.VERSION_21
    }
}

allprojects {
    repositories {
        mavenCentral()
        maven {
            url "https://hub.spigotmc.org/nexus/content/repositories/snapshots"
        }
        maven {
            url "https://repo.papermc.io/repository/maven-public/"
        }
        maven {
            url "https://maven.minecraftforge.net"
        }
        maven {
            url "https://maven.neoforged.net/releases"
        }
    }
}